k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: agri-backend-svc
spec:
  selector:
    app: agri-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
