k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: agri-frontend
spec:
  type: NodePort
  selector:
    app: agri-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
