k8s/mlflow-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:latest
          imagePullPolicy: Always
          command:
            - mlflow
          args:
            - server
            - --host=0.0.0.0
            - --port=5000
            - --allowed-hosts=*
            - --cors-allowed-origins=*
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-svc
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
